--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -24,3 +24,19 @@
 .card-top h1{
     font-size: 20px;
 }
+
+
+
+.btn-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-btn{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.contact-btn:hover{
+    background-color: grey;
+}
